--- a/Oblqo/MainForm.resx
+++ b/Oblqo/MainForm.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB8
-        IwAAAk1TRnQBSQFMAgEBHAEAARABAgEQAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        IwAAAk1TRnQBSQFMAgEBHAEAAZABAgGQAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAYADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -289,49 +289,49 @@
   <data name="activeTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFCSURBVDhPjVLLLgVBED2EWEjYWrCzsGIh/gAJnyQ24gsk
-        SIjvkEj4ACL27FiJTOJ63OvR091OTdeY7s5c5iQnd26dqurqU412+FHAzZFL5CI5G2KdYDaA8gZ4ewcK
-        Gyjf5RW1NU1qg5sE7Anp/+Ehcye0KEZc3BvwtLvmf8zC8fdYi2rI2Ekim8kp5TYw6GWa0mxqsZgjd04S
-        jlQk/AL160wXXlAbYYK4LSYlYtRA4MfYZAvovzQ5n0+MT1OUVYnTfzWo4eaB7/uQU5RsMCNB7rlLAxnX
-        L7PBQ96Aj6TLFewO8PzR5PxeoTLxshHyBm5liIlnrBUTBWY1E3WNdjc9NaZZ1+Ia9kAfCcXXPhNu04Ka
-        lV/7WhSjOpGjtxUl3OPo41rUhupVngeTxOnCAF+PjJ22jD0M1crosKxJ6KZCLAfwA8O9Mi0TqJQUAAAA
-        AElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFESURBVDhPjVK7SgRBECxFMRDO1EAzAyMNDv9ABf0kMRG/
+        QFDhxO8QBP0ARcyVBdFITDwfdz5md9bqmV53ZtjTLShur6u7p6d60IxyHLDz5DK5RM75WCuYDSC/Bt7e
+        gazwlO/8ktqaJjXBTgPFMVn+w0PmTmlRiLC4P+Rpt/X/kJnl75EWVZCxo0Q2k1PybWDYTzSl2dRiMUfu
+        HCX0VCTKRepXiS48pzbGBHFbTIrEoIGgnGCTLWDwUud8PjE+Q1FWJU7/1aCCXQC+731OlrPBrAS55zYN
+        ZNyyywYPaQM+kjZXKHaA54865/cKzsSLWkgb2JURJp6yVkwUmNVE1DUWu/GpIc26FlcoDvSRUHwdMOEm
+        Lqjo/NrXohDuRI7eVBRxj6NPalET3Ks88yaJ03cG+Hpk7KRh7FFwK6PDsiah7fhYCuAHcwsxgHx5BFwA
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="finishedTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFQSURBVDhPjVI9SwQxFBwFERS0tVCstbgDf4MK+pNs/A2C
-        Csp1dnJYWCyrm8XGxkMsrS0XRUGw8+Ocecnexduc3MBsNi9v3ksmQRL7mEaOFZRow6GFGyxbbCI47FD4
-        QH6Q34H673FtK2QlcIV5JnXI/r90OEaG2aCKMIlY7OKHRU6DKsBvOy0Y8pV8jOa7Xixz/Jnj5L/M8cIm
-        67jHDEdnscK+UwhuyyQlv3N5j8zDvE9vnnCNNWt2iTnGehZ3eGaRRZ29TcppCc4sUZ1KnFvnWFywXF24
-        xBevd0nnb3HiCxR443zDBP5WVu3fd76wnEYBPZLhEcRq0FVodvYcHMGbeNdY1E7SnT1V1EwUCmwmkioW
-        uU3Ea257cQ2HI3sk6eSY8uswqCLoeTqcjCQ36XBgtzQWepV6LPJBTnfxybEiM3Jk2+Mgc+SwrknMsGCx
-        BoBfEY4XFv6K3uwAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFRSURBVDhPjVI9SwQxFBwFERS0tVCstbgDf4MK+pNs/A2C
+        CsqBhZ2FhcWyullsbDzE0tpyURQEOz/uZl6yd/E2Jzcwm83Lm/eSSZDEPqaRYwUl2nBo4RbLFpsIDjsU
+        PpKf5E+g/rtc2wpZCVxjnkkdsvcvHY6RYTaoIkwiFjv4ZZHToArw204Lhnwjn6L5rhfLHH/mOPkvc7yy
+        yToeMMPRWayw7xSC2zJJyR9c3iPzMO/Rm2fcYM2aXWGOsa7FHV5YZFFnb5NyWoJzS1SnEhfWORYXLFcX
+        LvHN613S+Vuc+AIF3jnfMIG/lVX7950vLadRQI9keASxGnQVmp09B0fwJt43FrWTdGdPFTUThQKbiaSK
+        Re4S8ZrbXlzD4cgeSTo5pvw6DKoIep4OJyPJTToc2C2NhV6lHot8kNNn+OJYkRk5su1xkDlyWNckZliw
+        WANAH8uPFulqP7I4AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="cancelledTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFESURBVDhPdZJPS8NAEMXHFj9B1UNoUE+FXv1iIgmKaPRm
-        v6D4F2pRvHkp9NCqjb9ZZnCzSQYeb3l5b3Z2s5JWLTLcikzhkxhoE3hgtv76Fbn7EtkQqGOgreEbs7WL
-        7ruEZ2kwBZ5bvEOL/ZeG2WXbFYqB50ebWAyFbjq2G75FHuAz+DHSnuASfnENVOFOWEyTM5faGM4JzK3h
-        gWmn5qmXIit4XyfQG/aw7vYKH1tgDA5tPdmIvKsnQtZqoFAj+pEGtdBytEXqA90NbOywsxbrMdp97DG0
-        G2DUC/Mz5z6JrpnizX2GLJzNHkkQCVxYQM+8oOEza7+Twn0rkSU80gkGLK79A4E5fE74w7W1yCd8GWug
-        ILujjUMhVPpIIkMn7JeHX90om6SKzT0oGzunheHKHkkjaGcuzNZfOgnYw5wlGLV3FvkDRhxHHb//69YA
-        AAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFFSURBVDhPdZLNSgNBEITLBJ8g6mFJUE+BXH0xkQRFdPVm
+        XlD8JwZ/wGsgh0TN+vXQg7OzSUNRQ21VT8/sKK9Kaq+kAXyUAq0Pt9y2uX6lmw9pSaBK8SUt4Cu3NYvu
+        24THeTAHnmu8bY/9l4VfpNW6UAo8P9bEYyh0s7Gj4Vu6g0/g+0R7gEfwU9RAGe6ExSA788gawz0CE2+4
+        59qxe6qZNId3bQK74Ri23Z7hQw90wb6v+0vpzTwJikYDgxnRDyxohdZDm+Y+sL6Bjx12tmLdRbtNPY5m
+        A4x2YfHMvTiJrZniNfocRTibP5IgEjjzgJ15SsNH1vFOhtE3l2ZwxyZosbiMHwhM4FPC71FbSJ/weaqB
+        IdktaxwKobRHkhjWwn95+NW18knK1LwBo9rOeWG48EdSC/qZh27bXDYJ2MFcZOg0d5b+AIGpRs27t/JE
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="queuedTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFZSURBVDhPpZLNSsNAFIVTQVwIuhVRfANdCOIDqKAPEsgi
-        ZJE0aRMwrsStoILiS7hRBH0ARfsYKl0XBK0/30mn7ZBI/btwmJt7zr2ZOTPOV5Hn+ViWZfNJkiw1m83F
-        OI7nVDP06EjTdBO0QMfzvDdBObhl2LqRVSMMw0lEp+DjGxz5vj9h2oYB8ZNm4R2cmLZeUNC2bdEZ291l
-        fQEd8m3WC8MVaDQaW0WzzKGgMw9IGQhVq9frDxh5r5z6iq1h6LXqjsQUZNKApHFWwzWA7zvl/HHZ1oA2
-        w6cdXZVx+rcDulEUzTi6538N0CPh4+9HkImQNzaJLwvG3EfQol8mrvZ5g0vVNVxGrpVJjrbH0V6DIHgm
-        35HrtoafbhTN/UBwCKFHYg+qwPh1YNqGoefJkONyQxlo9l3XHTdt1UCkV3kF2qCrY7A+seXzyrZHRE0O
-        65oEDJ1SrUfZ4TifXAKMNj2G63gAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFcSURBVDhPpZLNSsNAFIVTQVwIuhVRfANdCOIDqKBvkFV2
+        3YUumjR/YFyJW0EFxZdwowj6AIr2MVS6Lghaf77TTtshkfp34TA395x7M3NmnK8iz/OxLMvmoyhaSpJk
+        sdFozKlm6NGRpukmaIK267pvgnJwy7B1IytHvV6fRHQKPr7Bke/7E6ZtGBA/aRbewYlp6wUFbdsWnbHd
+        XdYX0CbfZr0wXBdxHG91m2UOBZ15QMpAqEoYhg8Yea+c+oqtYei16o7EFGTSgKRxVsM1gO875fxx2daA
+        FsOnHV2Vcfq3AzpBEMw4uud/DdAj4ePvR5CJkDc2iS8LxtxH0KRfJq72eYNL1TVcRq4VSY6253nea61W
+        eybfkeu2hp9udJv7geAQQo/EHlSC8evAtA1Dz5Mhx8WGItDsV6vVcdNWDkR6lVegBTo6BusTWz4vbXtE
+        VOSwrknA0CnVepQdjvMJ2BOLCpLsi1gAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="mainTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
