--- a/Oblqo/MainForm.resx
+++ b/Oblqo/MainForm.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB8
-        IwAAAk1TRnQBSQFMAgEBHAEAAaABAwGgAQMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        IwAAAk1TRnQBSQFMAgEBHAEAAbABAwGwAQMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAAYADAAEBAQABCAYAASAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -290,11 +290,11 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFDSURBVDhPjVI9L0VBED2EKCS0CjqFikL8AyT8JNGIXyBB
-        QvwOCSFqIioNjVCJxvPxno97d9eZvXPd3c0+7klO3n1zZmZnzyzycIOAnSLnyFlysoq1QrEClFfA2ztw
-        ZirKd3lBbUmTcrCjgDkg3T/cZe6IFoUIizs9nnbb/A95bPm7r0U1ZOwokc3klHId6HUSTVmsarGYI3eO
+        QvwOISFqIioNjVCJxvPxno97d9eZvXPd3c0+7klO3n1zZmZnzyzycIOAnSLnyFlysoq1QrEClFfA2ztw
+        ZirKd3lBbUmTcrCjgDkg3T/cZe6IFoUIizs9nnbb/A95ZPm7r0U1ZOwokc3klHId6HUSTVmsarGYI3eO
         EvZUJNwM9ctEF55SG2CCuC0mRWLQQOCG2GQN6L40OZ9PjI9TlFWJ0381qGGnge/7Kue6ZIMJCXLPbRrI
-        uG6eDR7SBnwkba5gNoDnjybn9wrexPNGSBvYhT4mHrFWTBQUi4moazSb8akhi2UtrmF29JFQfO0y4SYu
-        qOn92taiEP5Ejp4rirjF0Ye1KAf/Kk8qk8TpuwL4emTsMDN2P/iV0WFZk9COVbEUwA9eTzCTz5vD7QAA
+        uG6eDR7SBnwkba5gNoDnjybn9wrexPNGSBvYhT4mHrNWTBQUi4moazSb8akhi2UtrmF29JFQfO0y4SYu
+        qOn92taiEP5Ejp4rirjF0Ye1KAf/Kk8qk8TpuwL4emTsMDN2P/iV0WFZk9COVbEUwA9WMTCPQp/0fgAA
         AABJRU5ErkJggg==
 </value>
   </data>
@@ -314,12 +314,12 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFHSURBVDhPdZLNSgNBEITLBJ8g6iEkqKdArr6YyAZFNHrT
-        d/I1FH8hBn/AayCHRM369dCDk9ndhqKG2qqentlRXqXUXklD+CAF2gBuua25fqWrD2lJoEzxJS3gC7dV
+        V/I9FH8hBn/AayCHRM369dCDk9ndhqKG2qqentlRXqXUXklD+CAF2gBuua25fqWrD2lJoEzxJS3gC7dV
         i+6bhK/zYA48l3jbHvsvC99Iq7pQilvpx5p4DIVuNnY0fEv38BH8kGiP8Ah+jhoYhzthMczOPLLGcJ/A
         xBvuuHbonnImzeFtm8BuOIZttxd43wM9sOvrwVJ6M0+CbqWBwYzoexa0QuujTXMfqG/gY4edrVj30O5S
         j6PaAKNdWDxzP05ia6Z4jT5HN5zNH0kQCZx4wM48peET63gnRfTNpRncsQlaLM7jBwIT+Jjwe9QW0id8
-        mmqgILthjUMhjO2RJIZa+C8Pv3qtfJJxam7AaG3nvDCc+SNZC/qZC7c1l00CtjB3M3SqO0t/7m9GmTNs
-        XZEAAAAASUVORK5CYII=
+        mmqgILthjUMhjO2RJIZa+C8Pv3qtfJJxam7AaG3nvDCc+SNZC/qZC7c1l00CtjB3M3SqO0t/5+9Gl51U
+        m0YAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="queuedTasksStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
