--- a/Oblqo/Properties/Resources.resx
+++ b/Oblqo/Properties/Resources.resx
@@ -122,13 +122,13 @@
     <value>..\Resources\loading.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AccountForm_ChangeAccount" xml:space="preserve">
-    <value>Change Account</value>
+    <value>Change Connection</value>
   </data>
   <data name="client_secret" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\client_secret.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="AccountForm_CreateNewAccount" xml:space="preserve">
-    <value>Create New Account</value>
+    <value>Create New Connection</value>
   </data>
   <data name="ErrorMessageBoxCaption" xml:space="preserve">
     <value>Error</value>
@@ -138,5 +138,11 @@
   </data>
   <data name="oblqo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\oblqo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FileListStatusBar_Filter" xml:space="preserve">
+    <value>Filter, for example: .jpg</value>
+  </data>
+  <data name="FileListStatusBar_Status" xml:space="preserve">
+    <value>{0} files, {1} unsync</value>
   </data>
 </root>
