--- a/Oblqo/Properties/Resources.resx
+++ b/Oblqo/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="back" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loading.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,16 +136,19 @@
   <data name="ErrorMessageBoxCaption" xml:space="preserve">
     <value>Error</value>
   </data>
+  <data name="FileListStatusBar_Filter" xml:space="preserve">
+    <value>Filter, for example: .jpg</value>
+  </data>
+  <data name="FileListStatusBar_Status" xml:space="preserve">
+    <value>{0} files, {1} unsync</value>
+  </data>
   <data name="no_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\no_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="oblqo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\oblqo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="FileListStatusBar_Filter" xml:space="preserve">
-    <value>Filter, for example: .jpg</value>
-  </data>
-  <data name="FileListStatusBar_Status" xml:space="preserve">
-    <value>{0} files, {1} unsync</value>
+  <data name="front" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\front.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
